# Toupies-DL

./: CMakeLists.txt  Integrable.cpp  Integrable.h  Integrateur.cpp  Integrateur.h  JOURNAL.txt  MANUEL UTILISATEUR.docx  Matrice3.cpp  Matrice3.h  README.md  README.txt  REPONSES.txt  ScGLWidget.h  Toupie.cpp  Toupie.h  Toupies-DL.pro  UltimateMain.cpp  UltimateToupieSimulator.pro  Vecteur.cpp  Vecteur.h  exercice9a.cpp  exercice9b.cpp  images.qrc  main.cpp  main_fichier.cpp  main_texte.cpp
Destiné au correcteur/: JOURNAL.txt
Destiné au correcteur/PLANS/: _README.txt
ExerciceP10/: ExP10.pro  ExP10.pro.autosave  README.txt  exerciceP10.cpp
ExerciceP10/text/: main_text.cc  text.pro
ExerciceP9/: Makefile  exercice9a.cpp  exercice9b.cpp
Qt_GL/: Qt_GL.pro  glwidget.cc  glwidget.h  glwidget.h.autosave  main_qt_gl.cc  sphere.cc  vue_opengl.cc  vue_opengl.cc.autosave  vue_opengl.h
ScientificToupieSimulator/: README.txt  ScMain.cpp  ScientificSimulation.txt  ScientificToupieSimulator.pro  object_script.Scientific-Toupie-Simulator
ScientificToupieSimulator/data/: EnergieTotale_Euler-Cromer.txt  L_a_Euler-Cromer.txt  L_k_Euler-Cromer.txt  ProduitMixte_Euler-Cromer.txt  police.qrc
ScientificToupieSimulator/headers/: Bloc2Boutons.h  QTextViewer.h  ScGLWidget.h  ScWidget.h  TextEdit.h
ScientificToupieSimulator/src/: QTextViewer.cpp  ScGLWidget.cpp  ScWidget.cpp  TextEdit.cpp  fichierSearch.cpp
UltimateToupieSimulator/: README.txt  UltimateMain.cpp  UltimateToupieSimulator.pro
UltimateToupieSimulator/data/: images.qrc
UltimateToupieSimulator/headers/: Grillage.h  LauncherAccueil.h  QTextViewer.h  TypeBouton.h  bordMode.h
UltimateToupieSimulator/src/: Bloc2Boutons.cpp  Grillage.cpp  LauncherAccueil.cpp  QTextViewer.cpp  TextEdit.cpp  TypeBouton.cpp  bordMode.cpp  boutonPosition.cpp
build-ExP10-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.ExP10.Debug  object_script.ex_P10.Release
build-ExP10-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: qrc_resource.cpp
build-Qt_GL-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-ScientificToupieSimulator-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: EnergieTotale_RK4.txt  L_a_RK4.txt  L_k_RK4.txt  Makefile  Makefile.Debug  Makefile.Release  ProduitMixte_RK4.txt  object_script.Scientific-Toupie-Simulator.Debug  object_script.Scientific-Toupie-Simulator.Release
build-ScientificToupieSimulator-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_ScWidget.cpp  moc_TextEdit.cpp  moc_fichierSearch.cpp  qrc_police.cpp  qrc_resource.cpp
build-Toupies-DL-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Toupies-DL.Debug  object_script.Toupies-DL.Release  resource.qrc
build-Toupies-DL-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_bordMode.cpp
build-UltimateToupieSimulator-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.Ultimate-Toupie-Simulator.Debug  object_script.Ultimate-Toupie-Simulator.Release
build-UltimateToupieSimulator-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_LauncherAccueil.cpp  moc_TextEdit.cpp  moc_TypeBouton.cpp  moc_bordMode.cpp  moc_boutonPosition.cpp  moc_fichierSearch.cpp  qrc_resource.cpp
ex_05/: .qmake.stash  ex_05.pro  makefile
ex_05/Qt_GL/: Qt_GL.pro  glwidget.h  object_script.ex_05_gl  vue_opengl.cc  vue_opengl.h
ex_05/general/: contenu.cc  contenu.h  general.pro
ex_05/text/: main_text.cc  text.pro
general/: ObjetPhysique.h  general.pro
general/headers/: Clonable.h  ConeSimple.h  Dessinable.h  Integrable.h  Integrateur.h  Matrice3.h  ObjetPhysique.h  SupportADessin.h  Systeme.h  TextViewer.h  Toupie.h  ToupieChinoise.h  Trace.h  Vecteur.h  constantes.h
general/source/: ConeSimple.cpp  Dessinable.cpp  Integrable.cpp  Integrateur.cpp  Matrice3.cpp  ObjetPhysique.cpp  Systeme.cpp  TextViewer.cpp  Toupie.cpp  ToupieChinoise.cpp  Trace.cpp  Vecteur.cpp  constantes.cpp
headers/: Bille.h  Clonable.h  ConeSimple.h  Dessinable.h  Integrable.h  Integrateur.h  Matrice3.h  SupportADessin.h  Systeme.h  TextViewer.h  Toupie.h  Vecteur.h  constantes.h
headers/Tests/: Bille.h  Oscillateur.h  TestIntegrateur.h  TestMatrice.h  TestSysteme.h  TestTextViewer.h  TestVecteur.h  Unittest.h
launcher/: README.txt  brouillon.txt  launcher.pro
launcher/data/: UltimateSimulation.txt  images.qrc
launcher/headers/: Bloc2Boutons.h  Grillage.h  LauncherAccueil.h  QTextViewer.h  TextEdit.h  TypeBouton.h  bordMode.h  boutonPosition.h  fichierSearch.h
source/: Bille.cpp  ConeSimple.cpp  Dessinable.cpp  Integrable.cpp  Integrateur.cpp  Matrice3.cpp  Oscillateur.cpp  Systeme.cpp  TextViewer.cpp  Toupie.cpp  Vecteur.cpp  constantes.cpp  testVecteur.cpp
source/Tests/: Bille.cpp  CMakeLists.txt  Oscillateur.cpp  StatsBille.m  TestIntegrateur.cpp  TestMatrice.cpp  TestTextViewer.cpp  TestVecteur.cpp  brouillon testintegrateur.txt  testAll.cpp  testSysteme.cpp
source/Tests/Reports/: TestMatrice_ErrReport.txt
text/: main_text.cc  text.pro
textes/: JOURNAL.txt  REPONSES.txt
(+40 files in other folders)
